--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ header img {
 
 /* =============Hero section================= */
 .hero-section {
+      background-image: url('img/main-hero-section.jpg')
       background-repeat: no-repeat;
       background-size: cover;
       min-width: 100%;
