--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ header img {
       cursor: pointer;
 }
 
-.faqs h2 {
+.faq-heading {
       color: #ffffff;
       text-align: center;
       margin-top: 4rem;
