--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
       margin: 0;
       padding: 0;
       border: none;
+      list-style: none;
       box-sizing: border-box;
 }
 
 body {
-      font-family: sans-serif;
+      font-family: Poppins;
       background-color: #000000;
 }
 
@@ -95,7 +98,7 @@ header img {
       font-size: 1.4rem;
       margin-top: 1rem;
       width: 90%;
-      line-height: 1.4rem;
+      line-height: 1.8rem;
       margin: auto;
 }
 
