--- a/style.css
+++ b/style.css
@@ -78,7 +78,6 @@ header img {
       position: absolute;
       top: 270px;
       box-sizing: border-box;
-      /* border: 1px solid #aaa; */
       margin: 0 auto;
       width: 100%;
       color: #ffffff;
@@ -103,7 +102,6 @@ header img {
 }
 
 .info input[type=text] {
-      /* background-color: #161616; */
       background: transparent;
       color: #fff;
       font-size: 1rem;
@@ -479,7 +477,7 @@ ul a {
 
       .info p {
             font-size: 1.1rem;
-	    line-height: 1.2rem;
+            line-height: 1.2rem;
       }
 
       .info input[type=text] {
@@ -645,7 +643,6 @@ ul a {
 
       .info p {
             font-size: 1rem;
-            /* width: 440px; */
             margin-top: 0.6rem;
       }
 
@@ -690,7 +687,7 @@ ul a {
             margin: 0 auto;
       }
 
-      /* FAQs */
+      /*-------------- FAQs -----------------*/
       .faqs_container {
             width: 90%;
             max-width: 1200px;
@@ -755,7 +752,6 @@ ul a {
             width: 140px;
             height: 45px;
             margin-left: 0.2rem;
-            /* margin-top: 1rem; */
             font-size: 1.1rem;
       }
 
@@ -796,6 +792,5 @@ ul a {
 
       .para {
             margin-left: 7%;
-
       }
 }
